--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,13 +1,15 @@
 .contenedor-main{
     background-color: rgb(230, 229, 227);
-    width: 40vw;
-    height: 80vh;
+    width: 100%;
+    height: 100%;
     border-radius: 5px;
     font-family: sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
 }
+
+
 
 .titulo{
     color: blue;
@@ -99,8 +101,8 @@ label{
 }
 
 table{
-    width: 100%;
-    padding: 10px;
+    width: 80%;
+    margin-left: 10%;
 }
 
 th{
@@ -117,6 +119,36 @@ td{
 
 .td-imagen{
     text-align: center;
+}
+/**************** ESTILO PARA MENSAJES ****************/
+.contenedor-mensajes{
+    width: 50%;
+    height: auto;
+    background-color: #fff;
+    margin: 10px;
+    padding: 5px;
+    border-radius: 10px;
+}
+
+.contenedor-chat{
+    margin: 10px;
+}
+
+.label{
+    margin-left: 10px;
+    font-family: sans-serif;
+    font-size: 15px;
+}
+
+.mail{
+    font-weight: bold;
+    color: rgb(42, 69, 249);
+}
+
+.texto{
+    font-family: italic;
+    color: rgb(16, 177, 10);
+    font-weight: 900;
 }
 
 /**************** VISTA MOBILE ****************/
