--- a/public/views/pages/index.ejs
+++ b/public/views/pages/index.ejs
@@ -9,13 +9,16 @@
 
         <%- include("../partials/formulario.ejs") %>
 
-        <div class="div-button">
-            <a href="/api/productos">
-                <button class="button-main">Ir a Vista Productos</button>
-            </a>
-        </div>
         
+        <div>
+            <h1 class="titulo-tabla">Vista de Productos</h1>
+            
+            <%- include("../partials/tabla.ejs") %>
+           
+        </div>
+
+        <%- include("../partials/mensajes.ejs") %> 
     </div>
-    
+    <script src="../../main.js"></script>
 </body>
 </html>
