--- a/public/views/partials/formulario.ejs
+++ b/public/views/partials/formulario.ejs
@@ -1,5 +1,5 @@
 <div class="contenedor-form">
-    <form class="form" action="/api/productos" method="post">
+    <form class="form" id="form" onsubmit="return agregarProducto(this)">
         <label for="name">Nombre:</label>
         <input class="input-form" type="text" name="name" id="name">
         
@@ -9,6 +9,6 @@
         <label for="url">Url imagen:</label>
         <input class="input-form" type="text" name="url" id="url">
         
-        <button class="button-form" type="submit">Guardar</button>
+        <button class="button-form" id="botonGuardar" type="submit">Guardar</button>
     </form>
 </div>
