--- a/public/views/partials/mensajes.ejs
+++ b/public/views/partials/mensajes.ejs
@@ -6,10 +6,27 @@
     </div>
 
     <form class="form-mensajes" id="form-mensajes" onsubmit="return mandarMensaje(this)">
-        <label class="label" for="mail">Mail:</label>
+        <label class="label" for="mail">mail:</label>
         <input type="text" class="inputMail" placeholder="Escribe tu mail" id="mail">
+
+        <label class="label" for="nombre">Nombre:</label>
+        <input type="text" class="inputNombre" placeholder="Nombre" id="nombre">
+
+        <label class="label" for="apellido">Apellido:</label>
+        <input type="text" class="inputApellido" placeholder="Apellido" id="apellido">
+
+        <label class="label" for="edad">Edad:</label>
+        <input type="text" class="inputEdad" placeholder="Edad" id="edad">
+
+        <label class="label" for="alias">Alias:</label>
+        <input type="text" class="inputAlias" placeholder="Alias" id="alias">
+
+        <label class="label" for="avatar">Avatar:</label>
+        <input type="text" class="inputAvatar" placeholder="Url de imagen" id="avatar">
+
+
         <div class="contenedor-chat">
-            <input type="text" class="inputTexto" placeholder="Escribe tu mensaje..." id="texto">
+            <input type="text" class="inputTexto" placeholder="Escribe tu mensaje..." id="text">
 
             <button class="button-enviar" id="button-enviar">Enviar</button>
         </div>
