--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -135,9 +135,27 @@ td{
 }
 
 .label{
-    margin-left: 10px;
+    margin-top: 10px;
+    margin-bottom: 3px;
     font-family: sans-serif;
     font-size: 15px;
+}
+
+.inputTexto{
+    border: none;
+    border-radius: 5px;
+    height: 40px;
+    width: 300px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.5);
+}
+
+.inputMensaje{
+    border: none;
+    border-radius: 3px;
+    height: 30px;
+    width: 300px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.5);
+
 }
 
 .imagenMensaje{
@@ -159,8 +177,9 @@ td{
 .form-mensajes{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    width: 50%;
 }
 
 /**************** VISTA MOBILE ****************/
