--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,5 +1,5 @@
 .contenedor-main{
-    background-color: rgb(192, 208, 198);
+    background-color: #CFDAC8;
     width: 100%;
     height: 100%;
     border-radius: 5px;
@@ -43,7 +43,7 @@
 
 
 
-/**************** ESTILO PARA FORMULARIO ****************/
+/**************** ESTILO PARA FORMULARIO PRODUCTOS ****************/
 .contenedor-form{
     display: flex;
     justify-content: center;
@@ -59,9 +59,6 @@
     
 }
 
-label{
-    
-}
 
 .input-form{
     border-radius: 4px;
@@ -74,7 +71,7 @@ label{
 }
 
 .button-form{
-    width: 80px;
+    width: 100px;
     height: 40px;
     background-color: rgb(84, 189, 55);
     border: none;
@@ -83,11 +80,11 @@ label{
     font-size: 15px;
     transition: .3s;
     margin-left: 10px 5px;
+    cursor: pointer;
 }
 
 .button-form:hover{
-    width: 78px;
-    font-size: 15px;
+    scale: 1.05;
 }
 
 
@@ -185,7 +182,7 @@ label{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(84, 189, 55);
+    background-color: #7C9473;
 }
 
 .titulo-bienvenida{
@@ -226,6 +223,15 @@ label{
 }
 
 /**************** ESTILO PARA LOGIN ****************/
+
+.contenedor-formularios{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .form-login{
     display: flex;
     flex-direction: column;
@@ -238,7 +244,13 @@ label{
     font-family: sans-serif;
     font-size: 40px;
     margin-left: 30px;
-    color: rgb(45, 45, 238);
+    color: #7C9473;
+}
+
+.titulo-secundario{
+    margin-left: 30px;
+    font-family: sans-serif;
+    color: #717370;
 }
 
 .input-login{
@@ -249,10 +261,9 @@ label{
 }
 
 .contenedor-login{
-    height: 30vh;
-    margin-left: 200px;
-    margin-right: 200px;
-    background-color: rgb(192, 208, 198);
+    height: 50%;
+    width: 50%;
+    background-color: #CFDAC8;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
