desafio servidor con balance de carga

--- a/public/views/pages/infoProcess.ejs
+++ b/public/views/pages/infoProcess.ejs
@@ -23,6 +23,8 @@
         <hr style="width: 100%;">
         <h2 class="subtitulo-info">Path de ejecución: <span class="info"><%= path %></span></h2>
         <hr style="width: 100%;">
+        <h2 class="subtitulo-info">Numero de procesadores: <span class="info"><%= numProcess %></span></h2>
+        <hr style="width: 100%;">
         <h2 class="subtitulo-info">PID: <span class="info"><%= pid %></span></h2>
         <hr style="width: 100%;">
         <h2 class="subtitulo-info">Carpeta de proyecto: <span class="info"><%= cwd %></span></h2>
